[package]
name = "solana_axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-server = "0.7.2"
solana-client = "1.18"
solana-sdk = "1.18"
bs58 = "0.5"
base64 = "0.21"
